# YOLO-World_EfficientViT-SAM

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  ruff.toml
