[project]
dependencies = [
    "gradio>=4.44.1",
    "inference-gpu[yolo-world]>=0.30.0",
    "onnxsim>=0.4.36",
    "segment-anything>=1.0",
    "supervision>=0.22.0",
    "timm>=1.0.15",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
description = "Add your description here"
name = "yolo-world-efficientvit-sam"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv.sources]
torch = {index = "pytorch-cu121"}
torchvision = {index = "pytorch-cu121"}

[[tool.uv.index]]
explicit = true
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
